crates/idakit-sys/facade/idakit_facade.h

typedef uint64_t idakit_ea_t; /* ea_t under __EA64__ */
/* Names (name.hpp). get_ea_name reads the name at an address; get_name_ea is the reverse
 * lookup (BADADDR if unknown); demangle_name turns a mangled symbol into readable form (<0
 * if the name is not mangled). The nlist enumerates every named address. String getters are
 * snprintf-style; <0 means "no such name". */
int64_t idakit_get_ea_name(idakit_ea_t ea, char *buf, size_t cap);
idakit_ea_t idakit_get_name_ea(const char *name);
int64_t idakit_demangle_name(const char *name, char *buf, size_t cap);
size_t idakit_nlist_size(void);
idakit_ea_t idakit_nlist_ea(size_t idx);
int64_t idakit_nlist_name(size_t idx, char *buf, size_t cap);
/* Name classification predicates (bytes.hpp has_*_name) over an address's flags word
 * (idakit_get_flags): 1/0 for user (explicit), auto (IDA-generated), dummy (address-derived).
 * Exposed so idakit can pin its FF_NAME/FF_LABL derivation to IDA's own logic. */
int idakit_has_user_name(uint64_t flags);
int idakit_has_auto_name(uint64_t flags);
int idakit_has_dummy_name(uint64_t flags);